# spacetraders-mcp

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
Dev/: ToolCreationPipeline.md  Verification.md
schemas/: SpaceTraderFullAPI.json
src/: main.py  spacetraders_utils.py  utils.py
