[project]
name = "spacetraders-mcp"
version = "0.1.0"
description = "MCP server for interacting with the SpaceTraders API, exposing its endpoints as MCP tools for AI agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "vecs>=0.4.5"
]
